Hide and open items

--- a/index1.html
+++ b/index1.html
@@ -126,6 +126,11 @@ in terminal</br>
 <pre><code>sudo apt-get install mongodb-org</code></pre>
 </br>
 </br>
+Installing homebrew:</br>
+ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"</br>
+brew doctor</br>
+brew install mongodb</br>
+
 
 <h3>Issue 5: Speed up your work with git: adorable aliases can simplify typing</h3>
 Execute
