--- a/index.html
+++ b/index.html
@@ -33,6 +33,37 @@
 		</br>
 		</br>
 
+		<h2>Javascript week</h2>
+		14.05.2014
+		<h3 id="is21">Issue 21: Installing Sublime Text 3 package control sysytem and some useful plugins</h3>
+		<div>
+			Open Sublime Text 3, then press Ctrl + ` (opens console) and insert following:
+			</br>
+			</br> 
+
+			import urllib.request,os,hashlib; h = '7183a2d3e96f11eeadd761d777e62404' + 'e330c659d4bb41d3bdf022e94cab3cd0'; pf = 'Package Control.sublime-package'; ipp = sublime.installed_packages_path(); urllib.request.install_opener( urllib.request.build_opener( urllib.request.ProxyHandler()) ); by = urllib.request.urlopen( 'http://sublime.wbond.net/' + pf.replace(' ', '%20')).read(); dh = hashlib.sha256(by).hexdigest(); print('Error validating download (got %s instead of %s), please try manual install' % (dh, h)) if dh != h else open(os.path.join( ipp, pf), 'wb' ).write(by)
+			</br>
+			</br> 
+			Then open Preferences => Package control => Install package and install following useful packages:
+			<ol>
+				<li>HTML 5</li>
+				<li>Git</li>
+				<li>jQuery</li>
+				<li>jQuery Docs</li>
+				<li>Less</li>
+				<li>JsFormat</li>
+				<li>ColorPicker</li>
+				<li>All Autocomplete</li>
+				<li>Color Highlighter</li>
+				<li>View in browser</li>
+			</ol>
+		</div>
+
+
+
+
+
+
 		<h2>Scala week</h2>
 
 		09.05.2014
