--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
 
 		<h2>Javascript week</h2>
 		14.05.2014
+
+		<h3 id="is22">Issue 22: Some easeljs docs</h3>
+		<div>
+			<a href="https://github.com/abtv/easeljsdraw">Little project: how to implement fast drawing with vector objects moving</a>
+			</br>
+			</br> 
+			What matters (from official documentation):</br> 
+			Stage autoClear</br> 
+			Indicates whether the stage should automatically clear the canvas before each render. You can set this to false to manually control clearing (for generative art, or when pointing multiple stages at the same canvas for example).
+		</div>
+		
 		<h3 id="is21">Issue 21: Installing Sublime Text 3 package control sysytem and some useful plugins</h3>
 		<div>
 			Open Sublime Text 3, then press Ctrl + ` (opens console) and insert following:
