--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
 		</br>
 		</br>
 
-		<h2>Javascript week</h2>
+		<h2>Javascript days</h2>
+		20.05.2014
+
+		<h3 id="is23">Issue 23: Uninstall package in Ubuntu</h3>
+		<div>
+			sudo apt-get purge package_name
+		</div>
+
 		14.05.2014
 
 		<h3 id="is22">Issue 22: Some easeljs docs</h3>
