--- a/index1.html
+++ b/index1.html
@@ -4,11 +4,9 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="abtv's notepad" />
-
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>abtv's notepad</title>
+    <script src="./javascripts/jquery-2.1.1.min.js"></script>
+    <script src="./javascripts/main.js"></script>
   </head>
 
   <body>
@@ -16,8 +14,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">abtv</h1>
-          <h2 id="project_tagline">My notepad - succinct issues and solutions</h2>
+          <h1 id="project_title"/>
+          <h2 id="project_tagline"/>
         </header>
     </div>
 
