--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 		</div>
 		
-		<h3 id="is21">Issue 21: Installing Sublime Text 3 package control sysytem and some useful plugins</h3>
+		<h3 id="is21">Issue 21: Installing Sublime Text 3 package control system and some useful plugins</h3>
 		<div>
 			Open Sublime Text 3, then press Ctrl + ` (opens console) and insert following:
 			</br>
