--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-<a href="index.html">Go to Scala week</a>  
+<a href="index2.html">&lt;&lt; Go to Javascript days and Scala week</a>  
 
 </br>
 </br>
