--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	    <a href="index.html">&lt;&lt; Go processing week</a>
+	    <a href="index.html">&lt;&lt; Go to processing week</a>
 	    &nbsp;&nbsp;&nbsp;
 	    <a href="index1.html">Go to Mongo & Git week &gt;&gt;</a>
 		</br>
