Git problem aws resolved

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 		<h2>Processing week</h2>
 		22.05.2014
 
+		<h3 id="is25">Issue 25: Git: there is no tracking information for the current branch</h3>
+		<div>
+		Instead</br>
+		git pull --all</br>
+		use</br>
+		git pull origin branch_name</br>
+		</div>
+
 		<h3 id="is24">Issue 24: Some memorable moments from "Getting real" from 37 signals</h3>
 		<div>
 			
