--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <section id="main_content" class="inner">
         
   
+  		&lt;&lt; Still not exists
+  		&nbsp;&nbsp;&nbsp;
 	    <a href="index2.html">Go to Javascript days and Scala week &gt;&gt; </a>
 
 		</br>
