Some stuff about 37 signals 2

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
 		<h3 id="is24">Issue 24: Some memorable moments from "Getting real" from 37 signals</h3>
 		<div>
-			1. Define direction. Shortly.
-			2. Right define priorities. You can't do all ASAP. Just define what matters.
-			3. Do lean product. Define your users. Define what most needed. Do one feature at a time.
-			4. Features must work correctly.
+			1. Define direction. Shortly.</br>
+			2. Right define priorities. You can't do all ASAP. Just define what matters.</br>
+			3. Do lean product. Define your users. Define what most needed. Do one feature at a time.</br>
+			4. Features must work correctly.</br>
 			5. Don't repeat competitors.
 		</div>
 	  </section>
