About small steps

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 		</br>
 
 		<h2>Processing week</h2>
+		31.05.2014
+		<h3 id="is26">Issue 26: Difficulty of software development</h3>
+		<div>
+		Use small steps with a tiny functionality.
+		You can't implement some killer feature at one step, but you can
+		create some concrete steps to great feature, each of them is one little feature.
+
+
 		22.05.2014
 
 		<h3 id="is25">Issue 25: Git: there is no tracking information for the current branch</h3>
