--- a/english.html
+++ b/english.html
@@ -32,11 +32,28 @@
 
 		<h2>English page</h2>
 
-		<a href="http://www.english-at-home.com/grammar/articles/">English articles</a>
-		
-		<a href="http://www.world-english.org/articles.htm">Exercises</a>
+    <h4>08.06.2014 Making an appointment</h4>
+    <a href="http://www.kgau.ru/distance/mf_05/antonova-bus-eng-2-3/m05_10.html">Making an appointment on the phone</a></br>
+    <a href="http://www.perfect-english-grammar.com/make-or-do.html">"Make" or "do"?</a></br>
+    Entertainment:</br>
+    <a href="http://gameofthrones.wikia.com/wiki/The_Mountain_and_the_Viper">The Mountain and the Viper</a></br>
+    </br>
 
+    <h4>04.06.2014 English articles</h4>
+    Rules:</br>
+		<a href="http://www.english-at-home.com/grammar/articles/">The first unit</a></br>		
+    <a href="http://www.grammarbank.com/articles.html">The second unit</a></br>
+    Excercises:</br>
+    <a href="http://www.english-at-home.com/exercise-articles/">The first unit: A famous detective and his deputy</a></br>
+    <a href="http://www.world-english.org/articles.htm">The second unit</a></br>
+    Entertainment:</br>
+    <a href="http://www.amalgama-lab.com/songs/l/louis_armstrong/go_down_moses.html">Go down Moses</a></br>
+    <a href="http://www.amalgama-lab.com/songs/f/frank_sinatra/drinking_water_aqua_de_beber.html">Drinking water</a></br>
+    <a href="http://www.amalgama-lab.com/songs/m/muse/feeling_good.html">Feeling good</a></br>
+    </br>
 
+    <h4>01.06.2014 What time is it?</h4>
+    <a href="http://elkuz.ru/skolko-vremeni-po-angliyski/">What time is it?</a>
 		
 	  </section>
 	</div>
