--- a/english.html
+++ b/english.html
@@ -48,6 +48,14 @@
     Excercises:</br>
     <a href="http://www.english-at-home.com/exercise-articles/">The first unit: A famous detective and his deputy</a></br>
     <a href="http://www.world-english.org/articles.htm">The second unit</a></br>
+    <a href="http://www.englisch-hilfen.de/en/exercises/nouns_articles/a_the.htm">The third unit</a></br>
+    <a href="http://www.englisch-hilfen.de/en/exercises/nouns_articles/article_the.htm">The fourth unit</a></br>
+    <a href="http://www.englisch-hilfen.de/en/exercises/nouns_articles/article_the2.htm">The fifth unit</a></br>
+    <a href="http://www.englisch-hilfen.de/en/exercises/nouns_articles/article_the3.htm">The sixth unit</a></br>
+    <a href="http://www.englisch-hilfen.de/en/exercises/confusing_words/a_an_some.htm">The seventh unit</a></br>
+    <a href="http://www.learnenglishfeelgood.com/mixed-english-articles1.html">The eighth unit</a></br>
+    <a href="http://www.learnenglishfeelgood.com/mixed-english-articles2.html">The ninth unit</a></br>
+    <a href="http://www.learnenglishfeelgood.com/esl-english-grammar-exercises.html">More excercises</a></br>
     Entertainment:</br>
     <a href="http://www.amalgama-lab.com/songs/l/louis_armstrong/go_down_moses.html">Go down Moses</a></br>
     <a href="http://www.amalgama-lab.com/songs/f/frank_sinatra/drinking_water_aqua_de_beber.html">Drinking water</a></br>
